0.20.x/_sources/api/skimage.graph.rst.txt
.. AUTO-GENERATED FILE -- DO NOT EDIT!

Module: :mod:`graph`
====================
.. automodule:: skimage.graph

.. currentmodule:: skimage.graph
.. autosummary::

   skimage.graph.central_pixel
   skimage.graph.cut_normalized
   skimage.graph.cut_threshold
   skimage.graph.merge_hierarchical
   skimage.graph.pixel_graph
   skimage.graph.rag_boundary
   skimage.graph.rag_mean_color
   skimage.graph.route_through_array
   skimage.graph.shortest_path

   skimage.graph.MCP
   skimage.graph.MCP_Connect
   skimage.graph.MCP_Flexible
   skimage.graph.MCP_Geometric
   skimage.graph.RAG


central_pixel
-------------

.. autofunction:: skimage.graph.central_pixel


.. include:: skimage.graph.central_pixel.examples

cut_normalized
--------------

.. autofunction:: skimage.graph.cut_normalized


.. include:: skimage.graph.cut_normalized.examples

cut_threshold
-------------

.. autofunction:: skimage.graph.cut_threshold


.. include:: skimage.graph.cut_threshold.examples

merge_hierarchical
------------------

.. autofunction:: skimage.graph.merge_hierarchical


.. include:: skimage.graph.merge_hierarchical.examples

pixel_graph
-----------

.. autofunction:: skimage.graph.pixel_graph


.. include:: skimage.graph.pixel_graph.examples

rag_boundary
------------

.. autofunction:: skimage.graph.rag_boundary


.. include:: skimage.graph.rag_boundary.examples

rag_mean_color
--------------

.. autofunction:: skimage.graph.rag_mean_color


.. include:: skimage.graph.rag_mean_color.examples

route_through_array
-------------------

.. autofunction:: skimage.graph.route_through_array


.. include:: skimage.graph.route_through_array.examples

shortest_path
-------------

.. autofunction:: skimage.graph.shortest_path


.. include:: skimage.graph.shortest_path.examples


:class:`MCP`
------------


.. autoclass:: MCP
  :members:
  :undoc-members:
  :show-inheritance:

  .. automethod:: __init__

.. include:: skimage.graph.MCP.examples


:class:`MCP_Connect`
--------------------


.. autoclass:: MCP_Connect
  :members:
  :undoc-members:
  :show-inheritance:

  .. automethod:: __init__

.. include:: skimage.graph.MCP_Connect.examples


:class:`MCP_Flexible`
---------------------


.. autoclass:: MCP_Flexible
  :members:
  :undoc-members:
  :show-inheritance:

  .. automethod:: __init__

.. include:: skimage.graph.MCP_Flexible.examples


:class:`MCP_Geometric`
----------------------


.. autoclass:: MCP_Geometric
  :members:
  :undoc-members:
  :show-inheritance:

  .. automethod:: __init__

.. include:: skimage.graph.MCP_Geometric.examples


:class:`RAG`
------------


.. autoclass:: RAG
  :members:
  :undoc-members:
  :show-inheritance:

  .. automethod:: __init__

.. include:: skimage.graph.RAG.examples

